--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: ./front
     ports:
       - "3000:3000"
+    container_name: lisco_front
     depends_on:
       - server
       
@@ -11,5 +12,5 @@ services:
     build: ./server
     ports:
       - "3001:3001"
-
+    container_name: lisco_server
     
