--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
 		"lodash": "^4.17.21",
 		"nodemon": "^2.0.15"
 	},
+	"type": "module",
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
@@ -17,7 +18,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"engines": {
-		"node": "16.x"
+		"node": "18.x"
 	},
 	"author": "Mohamad Al khatib",
 	"license": "ISC"
