--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
 	"dependencies": {
 		"cors": "^2.8.5",
-		"csv-to-js-parser": "^2.3.4",
-		"dotenv": "^16.0.0",
-		"express": "^4.17.3",
-		"express-list-routes": "^1.1.3",
-		"fs": "^0.0.1-security",
+		"csv-to-js-parser": "^2.3.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-list-routes": "^1.2.1",
+		"fs": "0.0.1-security",
 		"lodash": "^4.17.21",
-		"nodemon": "^2.0.15"
+		"nodemon": "^2.0.22"
 	},
 	"type": "module",
 	"version": "1.0.0",
@@ -16,9 +16,6 @@
 		"start": "node app.js",
 		"dev": "nodemon app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"engines": {
-		"node": "18.x"
 	},
 	"author": "Mohamad Al khatib",
 	"license": "ISC"
